--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -20,3 +20,17 @@ body {
 .form-control.error {
     border-color: #ff0000;
 }
+
+.toggle-like {
+    cursor: pointer;
+}
+
+.toggle-like.disabled {
+    opacity: .5;
+    pointer-events: none;
+}
+
+#comment-frm button {
+    opacity: .5;
+    pointer-events: none;
+}
